--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  supabase_flutter: ^1.10.25  # Or latest version
 
   intl: ^0.19.0 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4  # For mocking
+  build_runner: ^2.4.6  # To generate mocks
   flutter_lints: ^5.0.0
+  integration_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
