--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   supabase_flutter: ^1.10.25  # Or latest version
-
+  fl_chart: ^0.66.0
   intl: ^0.19.0 
 
 dev_dependencies:
