--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   supabase_flutter: ^1.10.25  # Or latest version
   fl_chart: ^0.66.0
   intl: ^0.19.0 
+  supabase: ^1.11.0
 
 dev_dependencies:
   flutter_test:
