--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   fl_chart: ^0.66.0
   intl: ^0.19.0 
   supabase: ^1.11.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
