--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   intl: ^0.19.0 
   supabase: ^1.11.0
   shared_preferences: ^2.2.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
