--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   supabase: ^1.11.0
   shared_preferences: ^2.2.2
   provider: ^6.0.5
+  uuid: ^4.2.0
 
 dev_dependencies:
   flutter_test:
