--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  supabase_flutter: ^1.10.25  # Or latest version
+  supabase_flutter: ^2.10.3  # Updated to latest version
   fl_chart: ^0.66.0
   intl: ^0.19.0 
-  supabase: ^1.11.0
+  supabase: ^2.10.0  # Updated to match supabase_flutter
   shared_preferences: ^2.2.2
   provider: ^6.0.5
   uuid: ^4.2.0
