--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.0.5
   uuid: ^4.2.0
+  device_info_plus: ^10.1.0
+  package_info_plus: ^8.0.2
 
 dev_dependencies:
   flutter_test:
