--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   uuid: ^4.2.0
   device_info_plus: ^10.1.0
   package_info_plus: ^8.0.2
+  share_plus: ^10.1.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
