Implement end-to-end encryption for sensitive user data
Added AES-256-GCM encryption system for all sensitive free-text fields using a per-user master key and JWT-derived key. Introduced EncryptionService for key management, encryption, and decryption. Updated activity, auth, craving, log entry, and reflection services to encrypt/decrypt relevant fields. Ensured backward compatibility and non-blocking error handling. Updated dependencies to include cryptography and crypto packages.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   package_info_plus: ^8.0.2
   share_plus: ^10.1.2
   path_provider: ^2.1.5
+  cryptography: ^2.7.0  # For AES-256-GCM encryption
+  crypto: ^3.0.3  # For SHA-256 key derivation
 
 dev_dependencies:
   flutter_test:
