Add url_launcher to dependencies
The url_launcher package was added as a direct dependency in pubspec.yaml to enable URL launching functionality in the project.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   crypto: ^3.0.3  # For SHA-256 key derivation
   flutter_secure_storage: ^9.2.2  # For secure PIN storage (biometrics)
   local_auth: ^2.3.0  # For biometric authentication
+  url_launcher: ^6.1.10  # Add other dependencies as needed
 
 dev_dependencies:
   flutter_test:
