Add deep link support for auth flows
Implements deep linking for email confirmation and password reset on Android and iOS. Adds new screens for email confirmation, password reset request, and setting a new password. Introduces AuthLinkHandler service for handling incoming auth-related deep links. Updates navigation and login page to support password reset flow. Adds debug widget for simulating deep links and tests for deep link parsing. Adds app_links dependency.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2  # For secure PIN storage (biometrics)
   local_auth: ^2.3.0  # For biometric authentication
   url_launcher: ^6.1.10  # Add other dependencies as needed
+  app_links: ^6.3.3  # For deep link handling (email confirmation, password reset)
 
 dev_dependencies:
   flutter_test:
