Improve scraping pipeline and data normalization
Enhanced the scraping pipeline with progress reporting, better handling of TripSit baseline data, and improved error handling. Added a data integrity verification step for Methylphenidate. Updated normalization logic to handle multiple TripSit formats, prioritize PsychonautWiki data, and track source flags for each drug. Improved file I/O encoding and logging in normalization.

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,9 @@ helper/
 
 # Raw scraped HTML data
 data/scraped/raw_html/
+
+# Raw scraped data files
+data/scraped/raw*.json
+# data/scraped/*.json
+# data/**
+# /scraped/*.json
