--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.0
   flutter_dotenv: ^6.0.0
   supabase_flutter: ^2.10.3  # Updated to latest version
   fl_chart: ^0.66.0
