--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,7 @@ data/scraped/raw*.json
 # data/scraped/*.json
 # data/**
 # /scraped/*.json
+
+
+# Design system CI reports (generated files)
+scripts/ci/design_system/reports/
