Update .gitignore and remove generated CI report files
Expanded .gitignore rules to cover all report directories and deleted all generated design system CI report JSON files from the repository. This helps prevent accidental commits of generated files and keeps the repository clean.

--- a/.gitignore
+++ b/.gitignore
@@ -112,4 +112,5 @@ data/scraped/raw*.json
 
 
 # Design system CI reports (generated files)
-scripts/ci/design_system/reports/
+scripts/ci/design_system/reports/*
+**/reports/
