--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   url_launcher: ^6.1.10  # Add other dependencies as needed
   app_links: ^6.3.3  # For deep link handling (email confirmation, password reset)
   freezed_annotation: ^2.4.1
+  riverpod_annotation: ^2.6.1
+  json_annotation: ^4.9.0
+  go_router: ^17.0.1
 
 
 dev_dependencies:
@@ -40,6 +43,8 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   integration_test:
     sdk: flutter
+  riverpod_generator: ^2.6.4
+  json_serializable: ^6.9.5
 
 flutter:
   uses-material-design: true
