Add comprehensive tests for tolerance feature
Expanded and enhanced tests for tolerance controller, logic, and models to cover more scenarios and edge cases. Added new test files for model validation and mock repository. Updated .gitignore to allow specific coverage files and added a filter.lcov for coverage filtering.

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,9 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-/coverage/
+/coverage/lcov.info
+/coverage/lcov_after.info
+
 
 # Symbolication related
 app.*.symbols
