--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   json_annotation: ^4.9.0
   go_router: ^17.0.1
+  http: ^0.13.3
 
 
 dev_dependencies:
