Add JSON serialization to admin models and CI scripts
Enabled JSON serialization for all admin Freezed models by adding *.g.dart files and updating model definitions. Introduced new CI scripts for architecture checks, including Freezed model enforcement, navigation centralization, Riverpod-only state management, and improved reporting for coverage and import checks.

--- a/scripts/ci/ci_config.yaml
+++ b/scripts/ci/ci_config.yaml
@@ -53,6 +53,15 @@ pipeline:
         - "**/*.g.dart"
         - "lib/generated/**"
 
+    freezed:
+      enabled: true
+
+    navigation:
+      enabled: true
+
+    riverpod:
+      enabled: true
+
     design_system:
       enabled: true
       allow_warnings: true
