--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^3.1.0
+  hooks_riverpod: ^3.1.0
+  flutter_hooks: ^0.21.3+1
   riverpod: ^3.1.0
   flutter_dotenv: ^6.0.0
   supabase_flutter: ^2.10.3  # Updated to latest version
