--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  meta: ^1.12.0
   flutter_riverpod: ^3.1.0
   hooks_riverpod: ^3.1.0
   flutter_hooks: ^0.21.3+1
