Load tolerance models from asset instead of database
Refactored ToleranceRepository to read tolerance models from a local JSON asset rather than fetching from Supabase. Updated asset path and parsing logic, and added the asset to pubspec.yaml for inclusion in the build.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,3 +56,4 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - backend/ML/drug_tolerance_model/outputs/tolerance_neuro_buckets.json
