Improve Android signing config and update .gitignore
Added key.properties, .jks, and .keystore files to .gitignore to prevent committing sensitive signing files. Updated build.gradle.kts to check for signing readiness before applying the release signing config, falling back to debug config if necessary.

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ app.*.map.json
 **/android/gradlew
 **/android/gradlew.bat
 **/android/local.properties
+**/android/key.properties
+**/android/*.jks
+**/android/*.keystore
 **/android/**/GeneratedPluginRegistrant.java
 
 # iOS related
